tests/baselines/reference/raiseErrorOnParameterProperty.errors.txt
==== tests/cases/compiler/raiseErrorOnParameterProperty.ts (1 errors) ====
    class C1 {
      constructor(public x: X) {
                            ~
!!! raiseErrorOnParameterProperty.ts(2,25): error TS2095: Could not find symbol 'X'.
      }
    }
    var c1 = new C1(0);
     
    